# pic-slim

./: .coderabbit.yaml  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml  ci.yml  release.yml
docs/: ARCHITECTURE.md  PRD.md  development-workflow-guide.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  thumbnail.rs  utils.rs
src-tauri/src/compressor/: gif.rs  jpeg.rs  mod.rs  png.rs
src/components/: ActionBar.tsx  DropZone.tsx  Header.tsx  ImageItem.tsx  ImageList.tsx  PreviewModal.tsx  ProgressBar.tsx  Settings.tsx
src/hooks/: useCompression.ts  useDragDrop.ts  useImageList.ts  useSettings.ts
src/lib/: tauri.ts
src/styles/: globals.css
src/types/: index.ts
